# Agents-Api

./: .gitignore  generate_model_data.py  pyproject.toml
app/: agents.py  handlers.py  instructions.py  main.py  schema.py  utils.py
data/breast_cancer/: breast_cancer_model.pkl
data/digits/: digits_model.pkl
data/iris/: iris_model.pkl
data/wine/: wine_model.pkl
mcp_server/: model_server.py
tests/: test_f1.py  test_gaurd.py  test_shap.py
